[package]
name = "howto-cli"
version = "0.2.0"
authors = ["pbzweihander <sd852456@naver.com>"]
license = "MIT"
description = "instant coding answers via the command line"
repository = "https://github.com/pbzweihander/howto"
keywords = ["cli", "search"]
edition = "2018"

[dependencies]
howto = "0.2.0"
getopts = "0.2.18"
openssl-probe = "0.1.2"
futures = "0.1.25"
tokio = "0.1.13"

[[bin]]
name = "howto"
path = "src/main.rs"
