[package]
name = "howto-cli"
version = "0.3.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT"
description = "instant coding answers via the command line"
repository = "https://github.com/pbzweihander/howto"
keywords = ["cli", "search"]
edition = "2018"

[dependencies]
# rustc 1.39.0-nightly (9eae1fc0e 2019-08-23)

futures-preview = "0.3.0-alpha.18"
howto = { version = "0.3", path = "../howto" }
openssl-probe = "0.1.2"
structopt = "0.3.0"
