[package]
name = "howto"
version = "0.2.1"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT"
description = "instant coding answers via the command line"
repository = "https://github.com/pbzweihander/howto"
keywords = ["cli", "search"]
edition = "2018"

[dependencies]
scraper = "0.9.0"
failure = "0.1.5"
lazy_static = "1.2.0"
futures = "0.1.25"
tokio = "0.1.14"
reqwest = "0.9.7"
