[package]
name = "howto"
version = "0.3.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT"
description = "instant coding answers via the command line"
repository = "https://github.com/pbzweihander/howto"
keywords = ["cli", "search"]
edition = "2018"

[dependencies]
# rustc 1.39.0-nightly (9eae1fc0e 2019-08-23)

failure = "0.1.5"
futures-preview = "0.3.0-alpha.18"
lazy_static = "1.4.0"
scraper = "0.10.1"
surf = "1.0.2"
