[package]
name = "howto"
version = "0.4.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT"
description = "instant coding answers via the command line"
repository = "https://github.com/pbzweihander/howto"
keywords = ["cli", "search"]
edition = "2018"

[dependencies]
failure = "0.1.5"
futures = "0.3"
lazy_static = "1.4.0"
reqwest = "0.10"
scraper = "0.10.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
